--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "campanha-vila-dalila",
+  "name": "dalila-page",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -43,7 +43,7 @@
     "react-redux": "^7.1.3",
     "react-responsive-navbar": "^1.0.11",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.1",
     "react-select": "^3.0.8",
     "react-spinners": "^0.8.1",
     "react-text-mask": "^5.4.3",
@@ -79,13 +79,15 @@
       "last 1 safari version"
     ]
   },
+  "resolutions": {
+    "babel-eslint": "10.0.3"
+  },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-import-helpers": "^1.0.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
